--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Global Timer
 -----------------------------------
 -----------------------------------
 Implemented via "microseconds" iterator.
-1000 seconds = 16.6mins = 996000000 micro seconds.
-The iterator thus iterates through 9.96e8 iterations.
+1000 seconds = 16.6mins ~ 996000000 micro seconds = 10e8 microseconds.
+The iterator thus iterates th rough 9.96e8 iterations.
 
 
