commiting everything and  with test.cpp 21:35pm

--- a/README
+++ b/README
@@ -8,3 +8,17 @@ Implemented via "microseconds" iterator.
 The iterator thus iterates th rough 9.96e8 iterations.
 
 
+
+------------------------------------
+git hub tips
+------------------------------------
+------------------------------------
+
+*how to push
+https://help.github.com/articles/adding-an-existing-project-to-github-using-the-command-line/
+
+*what is remote add
+https://git-scm.com/book/en/v2/Git-Basics-Working-with-Remotes
+
+
+
