dfs c code added. will implement with more complicated link edges.

--- a/README
+++ b/README
@@ -1,5 +1,12 @@
-
 -----------------------------------
+Seed
+-----------------------------------
+----------------------------------
+The 'seed' used in the generator engines is 3. This should produce the same results from every machine.
+
+
+
+----------------------------------
 Global Timer
 -----------------------------------
 -----------------------------------
